Runtime Radio Live Machine v1.1.0
# Changelog - Runtime Radio Live Machine

## Version 1.1.0 (2025-09-25)

### 🚀 **Major Enhancement Release - Professional Production Suite**

**Runtime Radio Live Machine v1.1.0** transforms the application into a comprehensive, production-ready audio console with enterprise-grade features, enhanced user experience, and professional workflows. This release addresses all critical issues identified in the initial version and adds significant new capabilities.

### 🏗️ **Architecture Overhaul**

#### **Progressive Web App (PWA)**
- ✅ **Service Worker Integration**: Complete offline functionality with intelligent caching
- ✅ **Web App Manifest**: Native app installation support with custom icons and shortcuts
- ✅ **Background Sync**: Automatic configuration synchronization
- ✅ **Push Notifications**: Update notifications for new versions

#### **Modern Development Stack**
- ✅ **Vite PWA Plugin**: Automated service worker generation and asset optimization
- ✅ **Enhanced Build System**: Optimized bundling with code splitting and lazy loading
- ✅ **TypeScript Strict Mode**: Improved type safety and developer experience
- ✅ **ESLint + Prettier**: Code quality and formatting automation

### 🎨 **User Experience Revolution**

#### **Dark/Light Theme System**
- ✅ **Dynamic Theme Switching**: Seamless theme transitions with system preference detection
- ✅ **Persistent Theme Settings**: User theme choices saved across sessions
- ✅ **Theme-Aware Components**: All UI elements adapt to selected theme
- ✅ **Accessibility Compliance**: Proper contrast ratios and focus indicators

#### **Mobile-First Responsive Design**
- ✅ **Adaptive Grid Layout**: 6→8→10→11 columns based on screen size
- ✅ **Touch-Optimized Controls**: 44px minimum touch targets for mobile devices
- ✅ **Horizontal Scroll Header**: Compact toolbar for mobile screens
- ✅ **Responsive Typography**: Scalable text sizes across devices

### ♿ **Accessibility Excellence**

#### **Complete AR

--- a/WEB/tsconfig.json
+++ b/WEB/tsconfig.json
@@ -25,5 +25,10 @@
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "exclude": [
+    "**/*.test.tsx",
+    "**/*.test.ts",
+    "vitest.config.ts"
+  ]
 }
