--- a/APP/package.json
+++ b/APP/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "runtime-radio-advanced-jingle-machine",
+  "name": "runtime-radio-live-machine-pro",
   "private": true,
-  "version": "1.1.0",
+  "version": "1.1.3",
+  "main": "electron/dist/main.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -13,7 +14,10 @@
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "electron:compile": "tsc -p electron/tsconfig.json",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"wait-on http://localhost:5173 && npm run electron:compile && electron .\"",
+    "electron:build": "npm run build && npm run electron:compile && electron-builder"
   },
   "dependencies": {
     "flag-icons": "^7.5.0",
@@ -30,16 +34,39 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.18",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "electron": "^39.2.4",
+    "electron-builder": "^26.0.12",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^30.1.3",
     "jest-environment-jsdom": "^30.1.2",
     "jsdom": "^23.0.1",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vite-plugin-pwa": "^1.0.3",
-    "vitest": "^1.0.4"
+    "vitest": "^1.0.4",
+    "wait-on": "^9.0.3"
+  },
+  "build": {
+    "appId": "com.runtimeradio.livemachinepro",
+    "productName": "Runtime Radio Live Machine Pro",
+    "directories": {
+      "output": "dist_electron"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/dist/**/*"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "public/icon-512.png"
+    }
   }
 }
