--- a/APP/package.json
+++ b/APP/package.json
@@ -66,7 +66,7 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "public/icon-512.png"
+      "icon": "assets/icon.png"
     }
   }
 }
