--- a/APP/package.json
+++ b/APP/package.json
@@ -1,7 +1,7 @@
 {
   "name": "runtime-radio-live-machine-pro",
   "private": true,
-  "version": "1.3.0",
+  "version": "1.3.1",
   "main": "electron/dist/main.js",
   "type": "module",
   "scripts": {
@@ -58,7 +58,7 @@
     "appId": "com.runtimeradio.livemachinepro",
     "productName": "Runtime Radio Live Machine Pro",
     "directories": {
-      "output": "dist_electron"
+      "output": "dist_electron_v1.3.0"
     },
     "files": [
       "dist/**/*",
