--- a/APP/public/manifest.json
+++ b/APP/public/manifest.json
@@ -2,12 +2,17 @@
   "name": "Runtime Radio Live Machine",
   "short_name": "RRLM",
   "description": "Professional web-based audio console for radio, podcast, and live event production",
+  "version": "1.3.1",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#111827",
   "theme_color": "#06b6d4",
   "orientation": "landscape-primary",
-  "categories": ["music", "productivity", "business"],
+  "categories": [
+    "music",
+    "productivity",
+    "business"
+  ],
   "lang": "en",
   "icons": [
     {
@@ -29,7 +34,12 @@
       "short_name": "Stop All",
       "description": "Emergency stop for all audio playback",
       "url": "/?action=stop-all",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icon-192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ],
   "screenshots": [
